--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <p class="person__caption">Joan Feynman</p>
               <img
                 class="person__image person__image_size_l"
-                src="images\person_feynman.png"
+                src="images/person_feynman.png"
                 alt="A picture of Joan Feynman"
               />
             </div>
@@ -194,7 +194,7 @@
               <p class="person__caption">Jill Tarter</p>
               <img
                 class="person__image person__image_size_m"
-                src="images\person_tarter.png"
+                src="images/person_tarter.png"
                 alt="A picture of Jill Tarter"
               />
             </div>
@@ -202,14 +202,14 @@
               <p class="person__caption">Margaret Burbidge</p>
               <img
                 class="person__image person__image_size_m"
-                src="images\person_burbidge.png"
+                src="images/person_burbidge.png"
                 alt="A picture of Margaret Burbidge"
               />
             </div>
             <div class="person person_name_mitchell">
               <img
                 class="person__image person__image_size_s"
-                src="images\person_mitchell.png"
+                src="images/person_mitchell.png"
                 alt="A picture of Maria Mitchell"
               />
               <p class="person__caption">Maria Mitchell</p>
@@ -217,7 +217,7 @@
             <div class="person person_name_cannon">
               <img
                 class="person__image person__image_size_m"
-                src="images\person_cannon.png"
+                src="images/person_cannon.png"
                 alt="A picture of Annie Jump Cannon"
               />
               <p class="person__caption">Annie Jump Cannon</p>
