fix path syntax

--- a/index.html
+++ b/index.html
@@ -283,8 +283,9 @@
       </main>
       <footer class="footer" id="footer">
         <div class="footer__columns">
-          <div class="footer__column footer__logo">
+          <div class="footer__column">
             <img
+              class="footer__logo"
               src="images/logo_white.svg"
               alt="Logotipo de la Biblioteca Triple Peaks"
             />
@@ -314,7 +315,7 @@
                 <a class="footer__column-link" href="#"
                   ><img
                     class="footer__social-icon"
-                    src="images\instagram_white.svg"
+                    src="images/instagram_white.svg"
                     alt="Logotipo de Instagram"
                   />Instagram</a
                 >
